footer fixed for reponsibness and the content of oder divs won't go behind the footer tag

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,16 @@ html{
     position: relative;
 }
 
+
+/*body code */
+
+body{
+    min-height: cal(100% - 110px); 
+    position: relative; 
+    padding-bottom: 110px;
+}
+
+
 /*head container */
 
 .container {
